force-app/main/default/objects/Form_Response__c/Form_Response__c.object-meta.xml
<CustomObject>
    <label>Form Response</label>
    <nameField>
        <displayFormat>FR-{0000}</displayFormat>
        <label>Form Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>