force-app/main/default/objects/Form_Response__c/fields/Form_Definition__c.field-meta.xml
<CustomField>
    <fullName>Form_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Definition</label>
    <referenceTo>Form_Definition__c</referenceTo>
    <relationshipLabel>Form Responses</relationshipLabel>
    <relationshipName>Form_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>