force-app/main/default/objects/Form_Response__c/fields/Target_Record__c.field-meta.xml
<CustomField>
    <fullName>Target_Record__c</fullName>
    <label>Target Record</label>
    <length>18</length>
    <type>Text</type>
</CustomField>