force-app/main/default/objects/Form_Response__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <referenceTo>Task__c</referenceTo>
    <relationshipLabel>Form Responses</relationshipLabel>
    <relationshipName>Form_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>